--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="stilus.css" />
 </head>
 <body>
-    
+    <h1>Szabó Gergő</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore illo vitae hic, eum nulla vero cupiditate debitis animi? Unde a possimus ducimus ipsum perspiciatis similique deserunt error veritatis? Magni, molestias?</p>
 </body>
 </html>
